fix: fieldset spacing

--- a/src/styles/app/input_text.sass
+++ b/src/styles/app/input_text.sass
@@ -16,6 +16,8 @@ input
   // These belong to preflight
   margin: 0
   padding: 0
+  &::placeholder
+    color: var(--cn-color-on-field-placeholder)
 
   &:hover
     color: var(--cn-color-on-field-hover)
